--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,6 +52,7 @@ body {
   position: relative;
   width: 75%;
   margin: 1rem auto;
+  background-color: red;
 }
 .save-button {
   position: absolute;
@@ -61,7 +62,22 @@ body {
   padding: 5px 10px;
   background-color: lightseagreen;
 }
+
+.update-button {
+  position: absolute;
+  top: 60px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+
 .save-button:hover {
+  background-color: green;
+  color: white;
+}
+
+.update-button:hover {
   background-color: green;
   color: white;
 }
